[tool.poetry]
name = "airshift_print"
version = "0.1.0"
description = ""
authors = ["ken https://github.com/nag8"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^7.1.2"
selenium = "^3.141.0"
pyyaml = "^5.3.1"
chromedriver = "^2.24.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
shift = "shift:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

